--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "pdf-lib": "^1.17.1",
     "sharp": "^0.32.6",
     "tesseract.js": "^5.0.3",
-    "@google/genai": "^0.1.0"
+    "@google/generative-ai": "^0.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
